# snowbridge

parachain/pallets/asset/: Cargo.toml
parachain/pallets/asset/src/: lib.rs
parachain/pallets/erc20-app/: Cargo.toml
parachain/pallets/erc20-app/src/: lib.rs  mock.rs  tests.rs
parachain/pallets/eth-app/: Cargo.toml
parachain/pallets/eth-app/src/: lib.rs  mock.rs  tests.rs
parachain/pallets/verifier/: Cargo.toml
parachain/pallets/verifier/src/: mock.rs
parachain/primitives/core/: Cargo.toml  build.rs
parachain/primitives/core/src/: types.rs
parachain/primitives/ethereum/: Cargo.toml
